@@ -62,6 +62,12 @@ fi
 
 AC_SUBST(MEMPROF_LIBS)
 
+AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
+
+if test x"$GCONFTOOL" = xno; then
+  AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
+fi
+
 AM_GCONF_SOURCE_2
 
 dnl Initialize gettext
